# customized_export_of_anomalous_data

server/: .gitignore  connect.py  main.py  mock_data.py  new_org.csv  pyproject.toml  sql.py  uv-runner.ps1
web/: next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  page.tsx
web/components/: theme-toggle.tsx
web/components/dashboard/: department-overview.tsx  group-stats.tsx  monthly-report.tsx  personal-stats.tsx  raw-data-table.tsx  stats-cards.tsx
web/components/data-table/: data-table.tsx
web/components/ui/: badge.tsx  button.tsx  card.tsx  select.tsx  separator.tsx  table.tsx  tabs.tsx
web/lib/: api.ts  mock-data.ts
