[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clickhouse-connect>=0.8.0",
    "duckdb>=1.4.0",
    "litestar[standard]>=2.21.1",
    "pandas>=2.3.0",
    "pydantic>=2.13.4",
]
# 部署到内网后想要更新依赖需要解除以下注释
# [[tool.uv.index]]
# url = "http://10.29.1.242:3003/pip/simple"
# default = true